--- a/styles/index.css
+++ b/styles/index.css
@@ -3,26 +3,38 @@
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-	height: 60dvh;
+	height: 78dvh;
 }
 
 .landing-image {
-	background-image: url('/imgs/landing.jpg');
+	background-image: url('/imgs/piano.jpg');
 	background-attachment: fixed;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
 }
 
-.landing-text {
+.landing-text-container {
+	height: 100%;
+	width: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	/* background-color: var(--section-color-1); */
+}
 
+.big-text {
+	font-size: 4rem;
+}
+
+.landing-text {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	/* background-color: var(--section-color-1); */
 	text-align: center;
 	user-select: none;
-
 	background-position: 25% 25%;
 	transform: scaleY(100px);
 	color: white;
@@ -30,6 +42,10 @@
 	-webkit-text-stroke-width: 1px;
 	-webkit-text-stroke-color: black;
 }
+
+/* .bottom-text {
+	margin-top: auto;
+} */
 
 .landing-background {
 	height: 100%;
@@ -40,24 +56,44 @@
 	.landing-text {
 		font-size: 4rem;
 	}
+	.big-text {
+		font-size: 6rem;
+	}
 }
 @media (min-width: 768px) {
 	.landing-text {
 		font-size: 4.5rem;
+	}
+	.big-text {
+		font-size: 5.5rem;
 	}
 }
 @media (min-width: 1024px) {
 	.landing-text {
 		font-size: 5rem;
 	}
+	.landing {
+		height: 85dvh;
+	}
+	.big-text {
+		font-size: 6rem;
+	}
 }
 @media (min-width: 1280px) {
 	.landing-text {
 		font-size: 6rem;
 	}
+
+	.big-text {
+		font-size: 7rem;
+	}
 }
 @media (min-width: 1536px) {
 	.landing-text {
 		font-size: 7rem;
+	}
+
+	.big-text {
+		font-size: 8rem;
 	}
 }
