--- a/styles/index.css
+++ b/styles/index.css
@@ -43,6 +43,21 @@
 	-webkit-text-stroke-color: black;
 }
 
+.fade-in {
+	animation: fade-in 0.5s ease-in-out;
+}
+
+@keyframes fade-in {
+	0% {
+		opacity: 0;
+		transform: translateY(-5%);
+	}
+
+	100% {
+		opacity: 1;
+	}
+}
+
 /* .bottom-text {
 	margin-top: auto;
 } */
