Reduced image size

--- a/styles/index.css
+++ b/styles/index.css
@@ -7,7 +7,7 @@
 }
 
 .landing-image {
-	background-image: url('/imgs/piano.jpg');
+	background-image: url('/imgs/piano-med.jpg');
 	background-attachment: fixed;
 	background-position: center;
 	background-repeat: no-repeat;
