--- a/styles/index.css
+++ b/styles/index.css
@@ -197,3 +197,48 @@ h3.big-text {
 		transform: translateY(-200px);
 	}
 }
+
+.milestone-section {
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
+}
+
+.button-container {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	gap: 2rem;
+}
+
+.milestone-button {
+	border: none;
+	font-size: xx-large;
+	transition: all;
+	background-color: inherit;
+}
+
+.milestone-button:hover {
+	cursor: pointer;
+}
+
+.un::after {
+	content: '';
+	width: 0px;
+	height: 3px;
+	display: block;
+	background: black;
+	transition: 300ms;
+}
+
+.un:hover::after {
+	width: 100%;
+}
+
+.selected::after {
+	content: '';
+	width: 100%;
+	height: 3px;
+	display: block;
+	background: black;
+}
